crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_show_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Show profile details

Usage: wheelctl profile show [OPTIONS] <PROFILE>

Arguments:
  <PROFILE>  Profile path or ID

Options:
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
