crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__safety_enable_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Enable high torque mode

Usage: wheelctl safety enable [OPTIONS] <DEVICE>

Arguments:
  <DEVICE>  Device ID or name

Options:
      --force       Skip safety confirmation
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
